# libstr

./: README.md  meson.build
src/: meson.build  str-util.h  str.cpp  str.h  str_cpp.h  str_priv.h
tests/: meson.build  test-1.cpp  test-2.cpp  test-3.cpp
