executable('test-1', ['test-1.cpp'],
           include_directories: libsrc_include,
           dependencies: [], link_with: libstr, gui_app: false)

executable('test-2', ['test-2.cpp'],
           include_directories: libsrc_include,
           dependencies: [], link_with: libstr, gui_app: false)

executable('test-3', ['test-3.cpp'],
           include_directories: libsrc_include,
           dependencies: [], link_with: libstr, gui_app: false)
